[tool.poetry]
name = "data_mining"
version = "0.1.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.4"
numba = "^0.55.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
